# cjm-substrate

./: .gitignore  README.md  bootstrap.html  bootstrap.html.md  capabilities_test.yaml  cjm.yaml  cli.html  cli.html.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
cjm_plugin_system/: _modidx.py  bootstrap.py  cli.py
cjm_substrate/: _modidx.py  bootstrap.py  cli.py
core/: adapter.html  adapter.html.md  adapter_manifest.html  adapter_manifest.html.md  capability.html  capability.html.md  config.html  config.html.md  config_store.html  config_store.html.md  diagnostics_store.html  diagnostics_store.html.md  empirical_store.html  empirical_store.html.md  errors.html  errors.html.md  journal_store.html  journal_store.html.md  manager.html  manager.html.md  manifest_format.html  manifest_format.html.md  metadata.html  metadata.html.md  platform.html  platform.html.md  ports.html  ports.html.md  proxy.html  proxy.html.md  queue.html  queue.html.md  scheduling.html  scheduling.html.md  secret_store.html  secret_store.html.md  telemetry.html  telemetry.html.md  wire.html  wire.html.md  (+2 more)
nbs/: bootstrap.ipynb  cli.ipynb  index.ipynb  nbdev.yml
scripts/: README.md  cascade_manifests.py
tests/: test_adapter.py  test_adapter_manifest.py  test_bootstrap.py  test_cache_paths.py  test_capability.py  test_cli.py  test_config.py  test_config_store.py  test_diagnostics_store.py  test_empirical_store.py  test_errors.py  test_hashing.py  test_journal_store.py  test_manager.py  test_manifest_format.py  test_metadata.py  test_platform.py  test_ports.py  test_wire.py  (+8 more)
(+85 files in other folders)
