[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-substrate"
dynamic = ["version"]
description = "A dependency-isolated capability-composition runtime: heterogeneous tools run in their own environments behind a uniform HTTP/JSON boundary; the host composes them into workflows with resource-aware scheduling and threads provenance through a context graph."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastapi', 'fastcore', 'psutil', 'uvicorn', 'httpx', 'typer', 'pyyaml']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-substrate"

[project.scripts]
cjm-ctl = "cjm_substrate.cli:app"

[tool.setuptools.dynamic]
version = {attr = "cjm_substrate.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_substrate*"]
